# nix

./: .gitignore  .gitmodules  .sops.yaml  Justfile  README.md  default.nix  flake.nix  justfile  test-iso.sh
assets/: default.nix
dotfiles/: .tmux.conf
dotfiles/nvim/: .stylua.toml  init.lua  lazy-lock.json
dotfiles/nvim/lua/: autocmd.lua  functions.lua  mappings.lua  options.lua  plugin_manager.lua
dotfiles/nvim/spell/: en.utf-8.add  en.utf-8.add.spl
hosts/: default.nix
hosts/default/: configuration.nix  home.nix
hosts/downtown/: configuration.nix  default.nix  disk-config.nix  hardware-configuration.nix  home.nix
hosts/isolate/: default.nix  iso.nix
hosts/live/: default.nix  iso.nix
hosts/nassie/: default.nix  disk-config.nix  hardware-configuration.nix
hosts/plain/: default.nix  hardware-configuration.nix
hosts/rapanui/: default.nix  hardware-configuration.nix
hosts/saxion/: default.nix  hardware-configuration.nix
hosts/terra/: default.nix  hardware-configuration.nix
hosts/tokyo/: default.nix  hardware-configuration.nix
hosts/uptown/: configuration.nix  home.nix
lib/: mkServer.nix  mkSystem.nix  ssh.nix
modules/: default.nix
modules/apps/: default.nix
modules/apps/bitwarden/: default.nix
modules/apps/chromium/: default.nix
modules/apps/deluge/: default.nix
modules/apps/discord/: default.nix
modules/apps/dolphin/: default.nix
modules/apps/element/: default.nix
modules/apps/firefox/: default.nix
modules/apps/freecad/: default.nix
modules/apps/general/: default.nix
modules/apps/kicad/: default.nix
modules/apps/libreoffice/: default.nix
modules/apps/logseq/: default.nix
modules/apps/ltspice/: default.nix
modules/apps/mpd/: default.nix
modules/apps/mumble/: default.nix
modules/apps/nautilus/: default.nix
modules/apps/nordvpn/: default.nix
modules/apps/obsidian/: default.nix
modules/apps/protonvpn/: default.nix
modules/apps/signal/: default.nix
modules/apps/spicetify/: default.nix
modules/apps/steam/: default.nix
modules/apps/thunar/: default.nix
modules/apps/ventoy/: default.nix
modules/apps/vlc/: default.nix
modules/core/: default.nix
modules/core/boot/: default.nix
modules/core/earlyoom/: default.nix
modules/core/fonts/: default.nix
modules/core/locale/: default.nix
modules/core/man/: default.nix
modules/core/nix/: default.nix
modules/core/notes/: default.nix  paste-image.sh
modules/core/pkgs/: default.nix
modules/core/powerManager/: default.nix  ppd-auto-power-profile.sh
modules/core/security/: default.nix
modules/core/ssh/: default.nix
modules/core/terminal/: default.nix
modules/core/xdg/: default.nix
modules/desktop/: default.nix
modules/desktop/gnome/: default.nix
modules/desktop/hyprland/: default.nix
modules/desktop/i3/: default.nix
modules/desktop/kde/: default.nix
modules/desktop/kde-wayland/: default.nix
modules/desktop/niri/: default.nix
modules/desktop/sway/: default.nix
modules/dev/: default.nix
modules/dev/aoc/: default.nix
modules/dev/c/: default.nix
modules/dev/cpp/: default.nix
modules/dev/embedded/: default.nix
modules/dev/leetcode/: default.nix
modules/dev/lua/: default.nix
modules/dev/markdown/: default.nix
modules/dev/python/: default.nix
modules/dev/rust/: default.nix
modules/dev/vscode/: default.nix
modules/dev/work/: default.nix
modules/devices/lenovo-p16-gen2/: default.nix
modules/devices/lenovo-t14/: default.nix
modules/gaming/: default.nix
modules/hardware/: default.nix
modules/hardware/bluetooth/: default.nix
modules/hardware/can/: default.nix
modules/hardware/displaylink/: default.nix
modules/hardware/laptop/: default.nix
modules/hardware/network/: default.nix
modules/hardware/nuphy/: default.nix
modules/hardware/nvidia/: default.nix
modules/hardware/print/: default.nix
modules/hardware/sound/: default.nix
modules/home/: alacritty.nix  bash.nix  firefox.nix  git.nix  gpg.nix  htop.nix  hyprland.nix  nvim.nix  starship.nix  tmux.nix
modules/home-manager/: bash.nix  git.nix  nvim.nix  tmux.nix
modules/homelab/: default.nix  gitea.nix  home-assistant.nix
modules/homelab/adguard/: default.nix
modules/homelab/arr/: default.nix
modules/homelab/audiobookshelf/: default.nix
modules/hyprland/: default.nix
modules/network/: default.nix
modules/nixos/: fonts.nix  gaming.nix  user.nix
modules/rice/: default.nix
modules/stylix/: default.nix
modules/virtualisation/: default.nix
overlays/: default.nix  displaylink.nix  flashfocus.nix
overlays/patches/: displaylink.patch
pkgs/: clipvault.nix  default.nix  displaylink.nix
secrets/: acme-dns.env  navidrome.env  pinchflat.env  protonvpn.conf.enc  restic-offsite.yaml  restic.env  secrets.yaml
templates/aoc_rust/: Cargo.toml
templates/haskell/: HELP.md  acronym.cabal  flake.nix  hie.yaml  package.yaml  stack.yaml
templates/project/: flake.nix
templates/python/: flake.nix  pyproject.toml
templates/ros2_cpp/: flake.nix
templates/ros2_cpp/motor_command_publisher/: CMakeLists.txt  package.xml
templates/ros2_cpp/motor_command_publisher/src/: motor_command_publisher_node.cpp
templates/rust/: flake.nix  rust-toolchain.toml
templates/rust_esp32/: .env  Cargo.toml  build.rs  default.nix  flake.nix  justfile  sdkconfig.defaults
templates/rust_esp32/.cargo/: config.toml
templates/rust_esp32/src/: blinky.rs  espcam.rs  main.rs  request.rs  server.rs  wifi.rs
templates/rust_esp32/src/control/: controller.rs  mod.rs  setpoint.rs
templates/rust_esp32s3/: .env  .envrc  .gitignore  Cargo.toml  flake.nix  justfile  partitions.csv  rust-toolchain.toml
templates/rust_esp32s3/.cargo/: config.toml
templates/rust_esp32s3/src/: main.rs
templates/rust_stm32h753/: Cargo.toml  flake.nix  justfile  readme.md  rust-toolchain.toml
templates/rust_stm32h753/ethernet/: Cargo.toml
templates/rust_stm32h753/ethernet/src/: main.rs
templates/rust_stm32h753/tb6600/: Cargo.toml
templates/rust_stm32h753/tb6600/src/: lib.rs
users/: default.nix
users/max/: default.nix
users/nixos/: default.nix
(+178 files in other folders)
