[package]
name = "esp32"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "esp32"
path = "src/main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
# shared = { path = "../shared" }
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
critical-section = { version = "1.1", features = ["std"], default-features = false }
embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std", "task-arena-size-16384"] }
embassy-time = { version = "0.4.0" }
esp-idf-hal = "0.45.2"
dotenvy_macro = "0.15.7"
thiserror = "2.0.12"
embedded-svc = "0.28.1"
embassy-sync = { version = "0.7.0", features = ["std"] }
embassy-futures = "0.1.1"
serde_json = "1.0.141"
anyhow = "1.0.99"
esp-idf-sys = "0.36.1"
heapless = "0.8.0"
serde = { version = "1.0.225", features = ["derive"] }
uom = { version = "0.37.0", features = ["serde", "si", "f32"] }
static_cell = "2.1.1"

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "components/esp32-camera"
bindings_header = "components/bindings.h"
bindings_module = "camera"

