[package]
name = "test-esp32s3"
version = "0.0.1"
authors = ["MaxKiv <maxkivits42@gmail.com>"]
edition = "2024"
rust-version = "1.88"
publish = false

[[bin]]
name = "test-esp32s3"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[dependencies]
defmt = "1"

embassy-executor = "0.9.0"
embassy-time = "0.5.0"
esp-backtrace = { version = "0.18.1", features = [
    "panic-handler",
    "defmt",
    "esp32s3",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = [
  "esp32s3",
] }
esp-hal = { version = "1.0.0", features = [
  "defmt",
  "unstable",
  "esp32s3",
] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "defmt",
  "esp32s3",
] }
esp-println = { version = "0.16.1", features = [
  "defmt-espflash",
  "esp32s3",
] }

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[features]
esp32 = [
    "esp-backtrace/esp32",
    "esp-println/esp32",
    "esp-bootloader-esp-idf/esp32",
    "esp-rtos/esp32",
    "esp-hal/esp32",
]
esp32c2 = [
    "esp-backtrace/esp32c2",
    "esp-println/esp32c2",
    "esp-bootloader-esp-idf/esp32c2",
    "esp-rtos/esp32c2",
    "esp-hal/esp32c2",
]
esp32c3 = [
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-rtos/esp32c3",
    "esp-hal/esp32c3",
]
esp32c6 = [
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-rtos/esp32c6",
    "esp-hal/esp32c6",
]
esp32h2 = [
    "esp-backtrace/esp32h2",
    "esp-println/esp32h2",
    "esp-bootloader-esp-idf/esp32h2",
    "esp-rtos/esp32h2",
    "esp-hal/esp32h2",
]
esp32s2 = [
    "esp-backtrace/esp32s2",
    "esp-println/esp32s2",
    "esp-bootloader-esp-idf/esp32s2",
    "esp-rtos/esp32s2",
    "esp-hal/esp32s2",
]
esp32s3 = [
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-rtos/esp32s3",
    "esp-hal/esp32s3",
]
