<?xml version="1.0"?>
<package format="3">
  <name>motor_command_publisher</name>
  <version>0.1.0</version>
  <description>ROS 2 node publishing Float64 motor commands</description>

  <maintainer email="m.p.w.kivits@saxion.nl">Max Kivits</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
